--- a/common/common.scss
+++ b/common/common.scss
@@ -5831,14 +5831,6 @@ tbody:last-child tr:last-child, thead:last-child tr:last-child {
   font-size: inherit;
   padding: 0 6px;
 }
-.topic-list .topic-status {
-  font-size: inherit;
-  margin: 0 6px 0 0;
-  padding: 0;
-}
-.topic-list .topic-status:last-of-type {
-  margin-right: 6px;
-}
 
 .topic-list-bottom {
   margin: 16px 0;
@@ -5849,11 +5841,9 @@ tbody:last-child tr:last-child, thead:last-child tr:last-child {
 }
 
 .topic-statuses {
-  margin-right: 0;
-}
-.topic-statuses .topic-status {
-  margin: 0;
-  padding: 0;
+  display: inline-block;
+  float: none;
+  margin-right: .25em;
 }
 .topic-statuses .topic-status .d-icon {
   height: auto;
