--- a/scss/common/_dropdown.scss
+++ b/scss/common/_dropdown.scss
@@ -65,8 +65,9 @@
   }
 
   .btn {
-    @extend %btn-raised-reverse;
     @extend %dropdown-link;
+
+    @include btn-raised-reverse;
 
     border-radius: 0;
     text-transform: none;
