--- a/scss/common/_user-badge.scss
+++ b/scss/common/_user-badge.scss
@@ -121,8 +121,8 @@
       }
 
       .more {
-        @extend %btn-base;
-        @extend %btn-raised;
+        @include btn-base;
+        @include btn-raised;
       }
     }
   }
