--- a/scss/mobile/_topic-post.scss
+++ b/scss/mobile/_topic-post.scss
@@ -11,7 +11,7 @@
 }
 
 .show-topic-admin {
-  @extend %btn-raised;
+  @include btn-raised;
 
   position: fixed;
   top: ($grid-gutter-width / 2 + $header-height);
