--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -91,8 +91,7 @@
   display: none;
 
   &.has-topics {
-    @extend %card;
-    @extend %card-block;
+    @include card;
 
     margin-bottom: $spacer-lg;
 
