--- a/scss/mixins/_card.scss
+++ b/scss/mixins/_card.scss
@@ -1,24 +1,8 @@
-%card {
+@mixin card {
   background-color: color-chooser($card-bg-dark, $card-bg-light);
   border: 0;
   border-radius: $card-border-radius;
   box-shadow: $card-box-shadow;
   color: color-chooser($card-color-dark, $card-color-light);
-  padding: 0;
-
-  &[href],
-  &[tabindex] {
-    @include focus-hover {
-      box-shadow: $card-box-shadow-hover;
-      text-decoration: none;
-    }
-
-    &:focus {
-      outline: 0;
-    }
-  }
-}
-
-%card-block {
   padding: $card-padding-y $card-padding-x;
 }
