Create `mixin` for dropdown

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,5 @@
 @import 'mixins/button';
 @import 'mixins/card';
+@import 'mixins/dropdown';
 @import 'mixins/hover';
 @import 'mixins/material-icons';
