--- a/scss/common/_form-auto-complete.scss
+++ b/scss/common/_form-auto-complete.scss
@@ -94,15 +94,15 @@ div {
 }
 
 .autocomplete {
-  @extend %dropdown-menu;
-  @extend %dropdown-menu-sm;
+  @include dropdown-menu;
+  @include dropdown-menu-sm;
 
   ul li {
     border-bottom: 0;
 
     a {
-      @extend %dropdown-link;
-      @extend %dropdown-link-sm;
+      @include dropdown-link;
+      @include dropdown-link-sm;
 
       align-items: center;
       color: inherit;
