--- a/scss/common/_timeline.scss
+++ b/scss/common/_timeline.scss
@@ -35,15 +35,15 @@
 
     .dropdown-menu,
     .popup-menu {
-      @extend %dropdown-menu-sm;
+      @include dropdown-menu-sm;
 
       a,
       .btn {
-        @extend %dropdown-link-sm;
+        @include dropdown-link-sm;
       }
 
       h3 {
-        @extend %dropdown-header-sm;
+        @include dropdown-header-sm;
       }
 
       .btn {
