--- a/scss/mobile/_topic-post.scss
+++ b/scss/mobile/_topic-post.scss
@@ -23,14 +23,14 @@
 }
 
 .topic-admin-popup-menu {
-  @extend %dropdown-menu-sm;
+  @include dropdown-menu-sm;
 
   h3 {
-    @extend %dropdown-header-sm;
+    @include dropdown-header-sm;
   }
 
   .btn {
-    @extend %dropdown-link-sm;
+    @include dropdown-link-sm;
 
     margin-bottom: 0;
   }
