--- a/scss/common/_base-override.scss
+++ b/scss/common/_base-override.scss
@@ -43,6 +43,10 @@ tbody {
   > li {
     margin-right: 1px;
 
+    &.active > a {
+      opacity: 1;
+    }
+
     > a {
       border-radius: $btn-border-radius;
       font-size: $btn-font-size;
@@ -57,8 +61,7 @@ tbody {
         outline: 0;
       }
 
-      &.active,
-      .active > & {
+      &.active {
         opacity: 1;
       }
     }
