--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -292,7 +292,7 @@
   tbody {
     td,
     th {
-      @extend %tbody-cell;
+      @include tbody-cell;
 
       &:first-of-type {
         padding-left: ($tbody-cell-padding-x * 2);
@@ -336,7 +336,7 @@
   thead {
     td,
     th {
-      @extend %thead-cell;
+      @include thead-cell;
 
       padding-top: ($thead-cell-padding-y / 2);
       padding-bottom: ($thead-cell-padding-y / 2);
